# STL-Viewer

./: .gitignore  CMakeLists.txt  README.md  loader.cpp  loader.h  main.cpp  obj_model.cpp  obj_model.h  stl_model.cpp  stl_model.h
